--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev:popup": "node script/popup-dev/launch.mjs",
-    "prepare": "node script/prepare-dev-env.mjs",
-    "build": "tsc -b && vite build --config script/content-script-prod/script.config.ts && vite build --config script/popup-dev/pages.config.ts",
-    "build:scripts": "vite build --config script/content-script-prod/vite.config.ts",
+    "dev:popup": "vite build --config script/popup/vite.config.ts --watch",
+    "build": "node script/build-all.mjs",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -29,10 +27,10 @@
     "globals": "^15.14.0",
     "install": "^0.13.0",
     "rollup-plugin-copy": "^3.5.0",
-    "rollup-plugin-external-globals": "^0.13.0",
     "rollup-plugin-visualizer": "^5.14.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-cdn-import": "^1.0.1"
   }
 }
