--- a/package.json
+++ b/package.json
@@ -4,30 +4,35 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev:popup": "vite build --config script/popup/vite.config.ts --watch",
+    "dev:popup": "vite build --config script/popup/vite.config.ts --watch --mode development",
     "build": "node script/build-all.mjs",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mui/material": "^6.3.1",
+    "@nextui-org/react": "^2.6.11",
+    "framer-motion": "^11.16.4",
     "react": "^19",
     "react-dom": "^19"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@react-types/shared": "^3.26.0",
     "@types/node": "^20",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
     "chrome-types": "^0.1.329",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "install": "^0.13.0",
+    "postcss": "^8.4.49",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-visualizer": "^5.14.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5",
