--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -12,6 +12,7 @@
   "action": {
     "default_popup": "popup/popup.html"
   },
+  "options_page": "options/options.html",
   "content_scripts": [
     {
       "js": [
