feat: 合并 options 和 popup 的 dev 命令

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,5 @@ dist-ssr
 *.sw?
 dev/content-script.iife.js
 stats.html
-extension/content-scripts/
-extension/popup/
-extension/options/
+extension/
+!extension/manifest.json
