--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,7 +22,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "paths": {
-      "@/*": ["./src/lib/*"]
+      "@/*": ["./src/shared/*"]
     }
   },
   "include": ["src"]
