--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.6.11",
-    "cross-iframe-rpc": "^1.0.1",
+    "@reduxjs/toolkit": "^2.5.0",
+    "cross-iframe-rpc": "^1.1.0",
     "framer-motion": "^11.16.4",
     "react": "^19",
-    "react-dom": "^19"
+    "react-dom": "^19",
+    "react-redux": "^9.2.0",
+    "react-router": "^7.1.3",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@react-types/shared": "^3.26.0",
     "@types/node": "^20",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "chrome-types": "^0.1.329",
