chore: 升级依赖版本

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,7 +6,8 @@
   "permissions": [
     "scripting",
     "activeTab",
-    "tabs"
+    "tabs",
+    "storage"
   ],
   "host_permissions": ["<all_urls>"],
   "action": {
