--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.16.4",
     "react": "^19",
     "react-dom": "^19",
+    "react-error-boundary": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
     "redux-persist": "^6.0.0"
