--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroui/toast": "^2.0.7",
     "@nextui-org/react": "^2.6.11",
     "@reduxjs/toolkit": "^2.5.0",
-    "cross-iframe-rpc": "^1.1.1",
+    "cross-iframe-rpc": "^1.1.2",
     "framer-motion": "^11.16.4",
     "react": "^19",
     "react-dom": "^19",
