--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@heroui/toast": "^2.0.7",
     "@nextui-org/react": "^2.6.11",
     "@reduxjs/toolkit": "^2.5.0",
-    "cross-iframe-rpc": "^1.1.2",
+    "cross-iframe-rpc": "^1.1.3",
     "framer-motion": "^11.16.4",
     "react": "^19",
     "react-dom": "^19",
     "react-error-boundary": "^5.0.0",
+    "react-hook-form": "^7.56.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
     "redux-persist": "^6.0.0"
