--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -9,19 +9,13 @@
     "tabs",
     "storage"
   ],
+  "background": {
+    "service_worker": "scripts/background.iife.js",
+    "type": "module"
+  },
   "host_permissions": ["<all_urls>"],
   "action": {
     "default_popup": "pages/popup.html"
   },
-  "options_page": "pages/options.html",
-  "content_scripts": [
-    {
-      "js": [
-        "content-scripts/index.iife.js"
-      ],
-      "matches": [
-        "<all_urls>"
-      ]
-    }
-  ]
+  "options_page": "pages/options.html"
 }
