--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroui/react": "2.8.0-beta.2",
+    "@heroui/system": "2.4.10",
+    "@heroui/theme": "2.4.14-beta.2",
     "@heroui/toast": "^2.0.7",
-    "@nextui-org/react": "^2.6.11",
     "@reduxjs/toolkit": "^2.5.0",
     "cross-iframe-rpc": "^1.1.3",
-    "framer-motion": "^11.16.4",
-    "react": "^19",
-    "react-dom": "^19",
+    "framer-motion": "^12.7.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.56.0",
     "react-redux": "^9.2.0",
@@ -28,6 +30,8 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@react-types/shared": "^3.26.0",
+    "@tailwindcss/postcss": "^4.1.4",
+    "@tailwindcss/vite": "^4.1.4",
     "@types/node": "^20",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
@@ -43,10 +47,9 @@
     "postcss": "^8.4.49",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-visualizer": "^5.14.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.4",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5",
-    "vite-plugin-cdn-import": "^1.0.1"
+    "vite": "^6.0.5"
   }
 }
