--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,5 @@ dist-ssr
 *.sw?
 dev/content-script.iife.js
 stats.html
-extension/
-!extension/manifest.json
+extension/pages/
+extension/scripts/
