--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Minimal Manifest",
-  "version": "1.0.0",
-  "description": "A basic example extension with only required keys",
+  "name": "Storage Sync2 Cloud",
+  "version": "0.0.1",
+  "description": "将你的 localstorage 存储到云端！Save your localstorage to cloud!",
   "permissions": [
     "scripting",
     "activeTab",
@@ -17,5 +17,12 @@
   "action": {
     "default_popup": "pages/popup.html"
   },
-  "options_page": "pages/options.html"
+  "options_page": "pages/options.html",
+  "default_locale": "zh",
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  }
 }
