--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Storage Sync2 Cloud",
+  "name": "CloudSync",
   "version": "0.0.1",
   "description": "将你的 localstorage 存储到云端！Save your localstorage to cloud!",
   "permissions": [
