--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
   "name": "cloud-sync",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "type": "module",
+  "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.14.0",
+    "typescript-eslint": "^8.18.2"
+  }
 }
