--- a/extension/package.json
+++ b/extension/package.json
@@ -29,7 +29,7 @@
     "@react-types/shared": "^3.26.0",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.4",
-    "@types/node": "^20",
+    "@types/node": "catalog:",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
