--- a/template/cloudflare/package.json
+++ b/template/cloudflare/package.json
@@ -13,7 +13,6 @@
 		"@cloudflare/vitest-pool-workers": "^0.8.19",
 		"typescript": "^5.5.2",
 		"vitest": "~3.2.0",
-		"wrangler": "^4.20.5",
-		"@types/node": "catalog:"
+		"wrangler": "^4.20.5"
 	}
 }
