--- a/template/cloudflare/wrangler.jsonc
+++ b/template/cloudflare/wrangler.jsonc
@@ -9,7 +9,13 @@
 	"compatibility_date": "2025-06-20",
 	"observability": {
 		"enabled": true
-	}
+	},
+	"kv_namespaces": [
+		{
+			"binding": "CloudSync",
+			"id": "<kv_namespace_id>"
+		}
+	]
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
